--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^17.0.2",
     "react-native": "^0.68.1",
     "react-scripts": "5.0.0",
+    "requests": "^0.3.0",
+    "selenium": "^2.20.0",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
