--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,4 +33,13 @@ jobs:
 
     - name: Build
       run: npm run build
+    - name: Docker Build & Push Action
+      uses: mr-smithers-excellent/docker-build-push@v5.6
+      with:
+        image: crossychainsaw/reverse-hangman-online-frontend
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
