--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "bootstrap": "^5.1.3",
     "jest": "^27.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.2.3",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-native": "^0.68.1",
     "react-scripts": "5.0.0",
