--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "jest": "^27.5.1",
     "react": "^17.0.2",
